--- a/src/com/jshooting/forms/EditSportsmansDialog.form
+++ b/src/com/jshooting/forms/EditSportsmansDialog.form
@@ -28,7 +28,7 @@
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
               <Component id="jLabelTeam" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jComboBoxTeam" max="32767" attributes="0"/>
+              <Component id="jComboBoxTeams" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
@@ -45,7 +45,7 @@
               <Component id="jButtonAddSportsman" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jComboBoxTeam" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBoxTeams" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelTeam" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -64,22 +64,17 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="jTableSportsmans">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="0" rowCount="0"/>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="sportsmansTableModel" type="code"/>
             </Property>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="jComboBoxTeam">
+    <Component class="javax.swing.JComboBox" name="jComboBoxTeams">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="teamsComboBoxModel" type="code"/>
         </Property>
       </Properties>
     </Component>
