showing sportsmans by team

--- a/src/com/jshooting/forms/EditSportsmansDialog.form
+++ b/src/com/jshooting/forms/EditSportsmansDialog.form
@@ -81,6 +81,9 @@
           <Connection code="teamsComboBoxModel" type="code"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxTeamsActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelTeam">
       <Properties>
