--- a/src/com/jshooting/forms/MainFrame.form
+++ b/src/com/jshooting/forms/MainFrame.form
@@ -184,7 +184,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonReports">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x447;&#x435;&#x442;&#x44b; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x447;&#x435;&#x442; ..."/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonReportsActionPerformed"/>
