--- a/reports/combinedReport.jrxml
+++ b/reports/combinedReport.jrxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="combinedReport" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="33573a3a-7df7-4327-b1c8-afb9bda94a84">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="76"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="DATE_FROM" class="java.lang.String"/>
+	<parameter name="DATE_TO" class="java.lang.String"/>
 	<field name="number" class="java.lang.Integer"/>
 	<field name="sportsmanName" class="java.lang.String"/>
 	<field name="totalShoots" class="java.lang.Integer"/>
@@ -22,7 +24,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="59" splitType="Stretch">
+		<band height="72" splitType="Stretch">
 			<staticText>
 				<reportElement uuid="26978346-eceb-421d-ab20-9968cbfef018" x="0" y="0" width="802" height="28"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -31,26 +33,40 @@
 				<text><![CDATA[Отчет по стрелковой подготовке]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="88c2016d-37ce-41fc-90c7-b06db22b9154" x="0" y="41" width="100" height="18"/>
-				<textElement>
+				<reportElement uuid="88c2016d-37ce-41fc-90c7-b06db22b9154" x="0" y="41" width="97" height="18"/>
+				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Период]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="71cf3f63-4991-4f8e-9226-39667af779ef" x="100" y="41" width="18" height="18"/>
-				<textElement>
+				<reportElement uuid="71cf3f63-4991-4f8e-9226-39667af779ef" x="97" y="41" width="21" height="18"/>
+				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<text><![CDATA[с]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="481a17d0-2874-4516-9646-3ebf87e2431c" x="214" y="41" width="21" height="18"/>
-				<textElement>
+				<reportElement uuid="481a17d0-2874-4516-9646-3ebf87e2431c" x="203" y="41" width="29" height="18"/>
+				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<text><![CDATA[по]]></text>
 			</staticText>
+			<textField>
+				<reportElement uuid="b48771ad-94e1-4187-b4fe-1726406e7aea" x="118" y="41" width="85" height="18"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{DATE_FROM}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="b888aab0-e526-4c70-89c8-572e7a588f3c" x="232" y="41" width="100" height="18"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{DATE_TO}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
